# table_dataset_pipeline

./: .gitignore  AzuriteConfig  README.md  function_app.py  hello.txt  host.json  main.py  meritz_crawler_____.py  origin_folder_uploader.py  pyproject.toml  table_folder_uploader.py  test.py  test2.py  test_upload_shared.txt  upload_test.txt
activities/: blob_to_gdrive.py  crawler_list.py  table_parser.py
application/: app.py
orchestrators/: terms_parsing_orchestrator.py
utils/: blob_controller.py  gdrive_controller.py  test.ipynb
